--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -30,7 +30,7 @@
             <thead>
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">First</th>
+                <th scope="col">Partenaires</th>
                 <th scope="col">Last</th>
                 <th scope="col">Handle</th>
             </tr>
