--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -3,18 +3,56 @@
 {% block title %}Hello PartnerController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+                <span class="fs-4">OptiSport</span>
+            </a>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Partenaires</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Modules
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">Catégories</a></li>
+                        <li><a class="dropdown-item" href="#">Droits</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </header>
+    </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/OptiSport/src/Controller/PartnerController.php'|file_link(0) }}">src/Controller/PartnerController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/OptiSport/templates/partner/index.html.twig'|file_link(0) }}">templates/partner/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="container">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Partenaires</th>
+                <th scope="col">Status</th>
+                <th scope="col">Handle</th>
+            </tr>
+            </thead>
+            <tbody class="table-group-divider">
+            {% for partner in partners  %}
+                <tr>
+                    <th scope="row"> {{ partner.id }}</th>
+                    <td> {{ partner.name }}</td>
+                    {% if partner.isActive %}
+                        <td>Actif</td>
+                    {% else %}
+                        <td>Inactif</td>
+                    {% endif %}
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% for partner in activePartners  %}
+        <p>{{ partner.name }}</p>
+        <p>{{  partner.description }}</p>
+
+    {% endfor %}
 {% endblock %}
