--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,27 +3,9 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <span class="fs-4">OptiSport</span>
-            </a>
-
-            <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Partenaires</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Modules
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Catégories</a></li>
-                        <li><a class="dropdown-item" href="#">Droits</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </header>
-    </div>
+    <header class="main-header">
+        <h1 data-icon="home"><span class="main-icon"></span>OptiSport - Espace de Gestion</h1>
+    </header>
 
     <div class="container">
         <table class="table">
