--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ app.request.locale() }}" class="h-100">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}OptiSport{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
@@ -13,7 +13,41 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body class="d-flex flex-column h-100">
+
+        <div class="container">
+                    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+                        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+                            <span class="fs-4">OptiSport</span>
+                        </a>
+
+                        <ul class="nav nav-pills">
+                            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Partenaires</a></li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Modules
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <li><a class="dropdown-item" href="#">Catégories</a></li>
+                                    <li><a class="dropdown-item" href="#">Droits</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </header>
+        </div>
+
+        <main role="main" class="container flex-shrink-0">
+            {% block body %}{% endblock %}
+        </main>
+
+        <footer class="footer mt-auto py-3 d-flex bg-dark">
+            <div class="container justify-content-center align-items-center">
+                <p>
+                    &copy; Copyright {{ 'now'|date('Y') }}
+                    &middot; <a href="#">Optisport</a>
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
