--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,8 @@
 
 {% block body %}
     <header class="main-header">
-        <h1 data-icon="home"><span class="main-icon"></span>OptiSport - Espace de Gestion</h1>
+        <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"></use></svg>
+        <h1>OptiSport - Espace de Gestion</h1>
     </header>
 
     <div class="container">
