--- a/templates/template/index.html.twig
+++ b/templates/template/index.html.twig
@@ -3,18 +3,10 @@
 {% block title %}Hello TemplateController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <header class="main-header">
+        <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#grid"></use></svg>
+        <h1>Packages</h1>
+    </header>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/OptiSport/src/Controller/TemplateController.php'|file_link(0) }}">src/Controller/TemplateController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/OptiSport/templates/template/index.html.twig'|file_link(0) }}">templates/template/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
