création des formulaire partner et structure, amélioriation base.html.twig, ajout de données de tests (structures)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -80,10 +80,9 @@
                         </a>
 
                         <ul class="nav nav-pills">
-                            <li class="nav-item"><a href="{{ asset('') }}" class="nav-link active" aria-current="page">Home</a></li>
-                            <li class="nav-item"><a href="{{ asset('partner') }}" class="nav-link">Partenaires</a></li>
+                            <li class="nav-item"><a href="{{ asset('partner') }}" class="nav-link active">Partenaires</a></li>
                             <li class="nav-item"><a href="{{ asset('template') }}" class="nav-link">Packages</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link">Modules</a></li>
+                            <li class="nav-item"><a href="{{  asset('mods') }}" class="nav-link">Modules</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Jim Pichon
