Ajout des formulaires création templates, création Modules et modification de l'index partner

--- a/templates/mods/index.html.twig
+++ b/templates/mods/index.html.twig
@@ -1,7 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ModsController!{% endblock %}
+{% block title %}Modules{% endblock %}
 
 {% block body %}
-GRAND MODULES
+
+    GRAND MODULES
+
+    <a class="btn btn-outline-success btn-lg" href="{{ path('new_module') }}">Ajouter un module</a>
 {% endblock %}
