--- a/templates/structure/index.html.twig
+++ b/templates/structure/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello StructureController!{% endblock %}
+{% block title %}Structures{% endblock %}
 
 {% block body %}
 <style>
