--- a/templates/template/index.html.twig
+++ b/templates/template/index.html.twig
@@ -8,5 +8,7 @@
         <h1>Packages</h1>
     </header>
 
+    <a class="btn btn-outline-success btn-lg" href="{{ path('new_template') }}">Ajouter un package</a>
+
 
 {% endblock %}
