--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -86,7 +86,7 @@
                         {% if app.user %}
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Jim Pichon
+                                    {{ app.user.firstName ~ app.user.lastName }}
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li><a class="dropdown-item" href="#">Mon Compte</a></li>
