Création du UserController, redirection vers le template User dans base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,6 +83,7 @@
                             <li class="nav-item"><a href="{{ asset('partner') }}" class="nav-link active">Partenaires</a></li>
                             <li class="nav-item"><a href="{{ asset('template') }}" class="nav-link">Packages</a></li>
                             <li class="nav-item"><a href="{{  asset('mods') }}" class="nav-link">Modules</a></li>
+                            <li class="nav-item"><a href="{{ path('app_user') }}" class="nav-link">Utilisateurs</a></li>
                         {% if app.user %}
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
