--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -4,15 +4,20 @@
 
 {% block body %}
  <h3>{{ partner.name }}</h3>
-
  <p> {{ partner.description }}</p>
+
  {% if structures is not empty  %}
     <h4>Structures</h4>
    <ul>
     {% for structure in partner.structures  %}
     <li> {{ structure.name }}</li>
     {% endfor %}
-   </ul>
+   </ul>   
  {% endif %}
+   <ul>
+    {% for module in partner.mods  %}
+    <li> {{ module.name }}</li>
+    {% endfor %}
+   </ul>
     <a class="btn btn-outline-success btn-lg" href="{{ path('new_structure', {id: partner.id}) }}">Ajouter une structure</a>
 {% endblock %}
