--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -15,8 +15,19 @@
    </ul>   
  {% endif %}
    <ul>
-    {% for module in partner.mods  %}
-    <li> {{ module.name }}</li>
+    {% for module in mods  %}
+    <li> {{ module }}</li>
+      {% if module in partner.mods %}
+        <a href="{{ path('activate_mod', {id: partner.id, mod: module.id})}}">Désactiver</a>
+         {% else %}
+        <a href="{{ path('activate_mod', {id: partner.id, mod: module.id})}}">Activer</a>
+      {% endif %}
+        
+      
+    
+ 
+    {# <button data-id="{{module.id}}" class="activationModule">Désactiver</button> #}
+  
     {% endfor %}
    </ul>
     <a class="btn btn-outline-success btn-lg" href="{{ path('new_structure', {id: partner.id}) }}">Ajouter une structure</a>
