--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -78,11 +78,12 @@
                                 <td>Inactif</td>
                             {% endif %}
                             <td>
+                    
                                 <a class="btn btn-outline-primary" href="{{ path('app_partner_show', {id: partner.id}) }}">Voir</a>
                                 {% if partner.isActive %}
-                                    <button type="button" class="btn btn-outline-danger">Désactiver</button>
+                                    <button data-partner="{{partner.id}}" class="activatePartner deactivate">Désactiver</button> 
                                 {% else %}
-                                    <button type="button" class="btn btn-outline-success">Activé</button>
+                                    <button data-partner="{{partner.id}}" class="activatePartner activate">Activer</button> 
                                 {% endif %}
                             </td>
                             <td>             
