--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,45 +3,59 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    <header class="main-header">
-        <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"></use></svg>
-        <h1>OptiSport - Espace de Gestion</h1>
-    </header>
+    <section>
+        <header class="home-hdr">
+            <h1>Espace de Gestion OpstiSport</h1>
+        </header>
+    </section>
+     <section class="module partner">
+        <header class="module-header">
+            <h2><span class="counter">3</span>Partenaires</h2>
+        </header>
 
-    <div class="container">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Partenaires</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
-            </tr>
-            </thead>
-            <tbody class="table-group-divider">
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    {% for partner in activePartners  %}
-        <p>{{ partner.name }}</p>
-        <p>{{  partner.description }}</p>
-
-    {% endfor %}
+        <div class="module-content">
+            <table class="table list partner">
+                <thead>
+                    <tr>
+                        <th class="id" data-field="id">ID</th>
+                        <th class="name" data-field="name">Nom Partenaire</th>
+                        <th class="partner-user" data-field="partner-user">Utilisateur lié</th>
+                        <th class="status" data-field="status">Status</th>
+                        <th class="package" data-field="package">Package utilisé</th>
+                        <th class="url" data-field="url">Liens Site web</th>
+                        <th class="actions" data-field="actions">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for partner in partners %}
+                        <tr>
+                            <td class="id keycol"><a href="partner.html" class="fill-cell"> {{ partner.id }}</a></td>
+                            <td class="name keycol"><a href="partner.html" class="fill-cell"> {{ partner.name }}</a></td>
+                            <td class="partner-user"> {{ partner.user }}</td>
+                            <td class="partner-status">
+                                {% if partner.isActive %}
+                                    Actif
+                                {% else %}
+                                    Inactif
+                                {% endif %}                   
+                            </td>
+                            <th>
+                                {% if partner.template %}
+                                    {{ partner.template }} 
+                                {% else %}
+                                    Aucun
+                                {% endif %}
+                            </th>
+                            <td><a href="{{partner.url}}">{{partner.url}}</a></td>
+                            <td class="actions">
+                                <a class="btn btn-outline-primary" href="{{ path('app_partner_show', {id: partner.id}) }}">Voir</a>
+                                <a href="#" class="">Modifier</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <a href="partner.html" class="btn" data-icon="view" title="Voir tous les partenaires"><span class="text">Voir tous les partenaires</span></a>
+        </div>
+    </section>
 {% endblock %}
