--- a/assets/styles/partials/_module.scss
+++ b/assets/styles/partials/_module.scss
@@ -1,1 +1,54 @@
+/* modules */
+
 /* module-partner */
+
+.module-header {
+    margin: 2rem;
+}
+
+.module-header h2 {
+    font-size: 3rem;
+}
+
+.module-title-hdr {
+    display: flex;
+    justify-content: center;
+}
+
+.partner-img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.module-partner {
+    margin-bottom: 2rem;
+}
+
+.module-content {
+    display: flex;
+}
+
+.structure {
+    flex-direction: row-reverse;
+}
+
+.module-content img {
+    padding: 1rem;
+}
+
+.module-info {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.module-text {
+    line-height: 2rem;
+    font-size: 1.3rem;
+    flex: 2;
+}
+
+.partner-text {
+    flex: 5;
+}
