--- a/assets/styles/partials/_typography.scss
+++ b/assets/styles/partials/_typography.scss
@@ -1,17 +1,42 @@
 /* typographie */
 
 @import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 html, body {
-font-family: 'Julius Sans One', sans-serif;
-font-size: 1rem;
+font-family: 'Source Sans Pro', sans-serif;
+font-size: 0.8rem;
 letter-spacing: 0.2rem;
 }
 
 h1, .logo {
     font-family: 'Julius Sans One', sans-serif;
     letter-spacing: 0.3rem;
-    font-size: 4rem;
+    font-size: 3rem;
+    color: $red;
+}
+
+.home-hdr h1 {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 2rem;
+}
+
+.container-nav {
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+.home-text p {
+    line-height: 2rem;
+    font-size: 1.3rem;
+}
+
+.button {
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+.module-header {
+    font-size: 3rem;
+    font-family: 'Julius Sans One', sans-serif;
     color: $red;
 }
