Mise à jours style - formulaires - Header

--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -5,6 +5,7 @@
 //     color: $white;
 // }
 .text-logo-hdr {
+    font-size: 5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
