--- a/assets/styles/partials/_typography.scss
+++ b/assets/styles/partials/_typography.scss
@@ -10,10 +10,10 @@ font-size: 0.8rem;
 letter-spacing: 0.2rem;
 }
 
-h1, .logo {
+.logo {
     font-family: 'Julius Sans One', sans-serif;
     letter-spacing: 0.3rem;
-    font-size: 3rem;
+    font-size: 5rem;
     color: $red;
 }
 
