--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,7 +78,7 @@
             </div>
             <div class="text-logo-hdr">
                 <h2>Gestion</h2>
-                <h1><a href="{{ path('app_home') }}">OptiSport</a></h1>
+                <a class="logo" href="{{ path('app_home') }}">OptiSport</a>
             </div>
 
             <div class="separation">
