--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -81,7 +81,7 @@
                 <p class="module-text"> {{ activePartnersNumber}} partenaire(s) actif </p>
 
                 <div class="module-btn">
-                    <a class="btn btn-outline-primary btn-large" href="{{ path('app_partner') }}">Gérer les Partenaires</a>
+                    <a class="btn btn-outline-primary btn-large" href="{{ path('app_partner') }}">Voir nos Partenaires</a>
                 </div>
             </div>
         <div>
@@ -162,7 +162,7 @@
                 <p class="module-text"> {{ activeStructuresNumber }} structure(s) active(s) </p>
 
                 <div class="module-btn">
-                    <a class="btn btn-outline-primary btn-large" href="{{ path('app_partner') }}">Gérer les Structures</a>
+                    <a class="btn btn-outline-primary btn-large" href="{{ path('app_partner') }}">Voir nos Structures</a>
                 </div>
             </div>
         <div>
