--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,1 +1,10 @@
+
+{% extends 'base.html.twig' %}
+
+{% block title %}Partenaires{% endblock %}
+
+{% block body %}
+
 {% include ('user/_form.html.twig') %}
+
+{% endblock %}
