--- a/templates/partner/new.html.twig
+++ b/templates/partner/new.html.twig
@@ -1,3 +1,11 @@
-{% include ('partner/_form.html.twig') %}
+{% extends 'base.html.twig' %}
+
+{% block title %}Partenaires{% endblock %}
+
+{% block body %}
+
+    {% include ('partner/_form.html.twig') %}
+
+{% endblock %}
 
 
