--- a/templates/template/new.html.twig
+++ b/templates/template/new.html.twig
@@ -1,1 +1,9 @@
+{% extends 'base.html.twig' %}
+
+{% block title %}Partenaires{% endblock %}
+
+{% block body %}
+
 {% include ('template/_form.html.twig') %}
+
+{% endblock %}
