--- a/templates/mods/index.html.twig
+++ b/templates/mods/index.html.twig
@@ -6,5 +6,10 @@
 
     GRAND MODULES
 
+    {% for module in modules %}
+        <p> {{ module.name }} </p>
+        <a href="{{ path('edit_module', {id: module.id}) }}">Modifier le module</a>
+    {% endfor %}
+
     <a class="btn btn-outline-success btn-lg" href="{{ path('new_module') }}">Ajouter un module</a>
 {% endblock %}
