Modification Style Partenaires

--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -3,8 +3,7 @@
 {% block title %}Partenaires{% endblock %}
 
 {% block body %}
-    <header class="main-header">
-        <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#people-circle"></use></svg>
+    <header class="module-title-hdr partner">
         <h1>Partenaires</h1>
     </header>
     
