--- a/assets/styles/partials/_home.scss
+++ b/assets/styles/partials/_home.scss
@@ -20,6 +20,7 @@
 .home-img {
     max-width: 100%;
     max-height: 100%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px 0px;
 }
 
 .home-text {
