--- a/assets/styles/partials/_module.scss
+++ b/assets/styles/partials/_module.scss
@@ -15,6 +15,10 @@
     justify-content: center;
 }
 
+.module-title-hdr.partner {
+    margin: 4rem 0rem;
+}
+
 .partner-img {
     max-width: 100%;
     max-height: 100%;
